[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.21"
frost-ed25519 = { version =  "0.7.0", features = ["serialization"] }
hyper = "1.1.0"
tokio = { version = "1.35.1", features = ["full"] } 
serde = "1.0.195"
serde_json = "1.0.111"
lazy_static = "1.4.0"
rand = "0.8.5"
base64 = "0.21.7"
